petclinic/petclinic-vets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: petclinic-vets
  name: petclinic-vets
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-vets
  template:
    metadata:
      labels:
        app: petclinic-vets
    spec:
      containers:
      - image: quay.io/sololabs/petclinic-vets:v3
        imagePullPolicy: IfNotPresent
        name: petclinic-vets
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 16Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petclinic-vets
  name: petclinic-vets
  namespace: default
spec:
  ports:
  - name: http-ui
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: petclinic-vets
  type: ClusterIP
