petclinic/petclinic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: petclinic
  name: petclinic
  namespace: default
spec:
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: quay.io/sololabs/petclinic:v3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petclinic
  name: petclinic
  namespace: default
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: petclinic
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: petclinic-db
  namespace: default
  labels:
    app: petclinic-db
spec:
  selector:
    matchLabels:
      app: petclinic-db
  serviceName: petclinic-db
  template:
    metadata:
      labels:
        app: petclinic-db
    spec:
      containers:
      - name: petclinic-db
        image: quay.io/sololabs/petclinic-db:v3
        ports:
        - containerPort: 3306
          protocol: TCP
          name: mysql
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: sql-data
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
      volumes:
      - name: sql-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-db
  namespace: default
  labels:
    app: petclinic-db
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: petclinic-db
  type: ClusterIP
