petclinic/vs-3-petclinic-contact.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petclinic
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - "*"
    routes:
    - matchers:
      - prefix: /contact
      routeAction:
        single:
          destinationSpec:
            aws:
              logicalName: contact-form:3
              responseTransformation: true
          upstream:
            name: aws
            namespace: gloo-system
    - matchers:
      - prefix: /vets
      routeAction:
        single:
          upstream:
            name: default-petclinic-vets-8080
            namespace: gloo-system
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-petclinic-8080
            namespace: gloo-system
